Fixing error messages